Thu Oct 30 17:42:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* admin.c (admin): Deal with new :: syntax for ranges.
	* rcs.c, rcs.h (RCS_delete_revs): New arg inclusive (set for the old
	behavior, clear to enable new code).
	* admin.c (admin_fileproc): Set it if :, clear it if ::.
	* sanity.sh (basica, head, branches, log): Add tests for this feature.

	* admin.c (admin_fileproc): Clean up the error message which
	happens if one of the RCS_* functions returns an error status; it
	is confusing to say that "rcs" failed now that this is implemented
	internally.
	* sanity.sh (admin): Update accordingly.

Wed Oct 29 07:07:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (admin-22-o24): New test, tests that admin -o
	correctly munged the deltatexts on a branch too.

	* rcs.c (RCS_delete_revs): If we are deleting an entire branch,
	delete the node in ->branches rather than setting the ->key to the
	bogus value NULL.
	* rcs.c (RCS_delete_revs): If "rev1" equals "branchpoint", then set
	"before" to the revision on the trunk that we branch from.
	* rcs.c (RCS_delete_revs): Don't set rev2 to revp->version (the
	code is missing an xstrdup, but it doesn't matter because rev2
	isn't used after this point).
	* sanity.sh (binfiles2-o2 to binfiles2-o4): New tests, for this.

Tue Oct 28 19:30:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): Restore code which passes rev2 to
	RCS_getbranchpoint if rev1 is NULL; it still makes sense for the
	non-trunk case.  Fixes admin-22-o22 in testsuite.

	* sanity.sh (admin-18): Adjust to reflect "rcs failed" no longer
	being suppressed by global -q option.

	* rcs.c (RCS_delete_revs): If rev1 == NULL and rev2 is on the
	trunk, handle it the same way we do everything else--by swapping
	the two.  This replaces the code which tried to kludge what we
	passed to RCS_getbranchpoint (which didn't work).
	* sanity.sh (binfiles2-o1 to binfiles2-o4): New tests, for this fix.